--- a/MultiLayerNueralNetwork/HelperFunctions.ipynb
+++ b/MultiLayerNueralNetwork/HelperFunctions.ipynb
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6528099556897475\n"
+      "1.544152856533524\n"
      ]
     }
    ],
@@ -94,26 +94,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Implement L2 Loss\n",
     "def L2_loss(m,A,Y):\n",
-    "        J=np.sqrt(np.sum((np.subtract(A,Y))**2))\n",
+    "        J=(1./m)*np.sqrt(np.sum((np.subtract(A,Y))**2))\n",
     "        return J"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7320508075688772\n"
+      "0.5773502691896257\n"
      ]
     }
    ],
@@ -126,6 +126,164 @@
     "#print(np.eye(3))\n",
     "#print(np.zeros((3,3)))\n",
     "#np.subtract(np.eye(3)-np.zeros((3,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Gradient descent algorithms \n",
+    "\n",
+    "#Implement gardient descnet with momentum. \n",
+    "\n",
+    "def gradient_descent_with_momentum(grad_params,params,exponential_weighted_grad_params,learning_rate=0.1,beta_1=0.9):\n",
+    "    \n",
+    "    W1=params[\"W1\"]\n",
+    "    W2=params[\"W2\"]\n",
+    "    b1=params[\"b1\"]\n",
+    "    b2=params[\"b2\"]\n",
+    "    \n",
+    "    dW1_weighted=exponential_weighted_grad_params[\"dW1\"]\n",
+    "    dW2_weighted=exponential_weighted_grad_params[\"dW2\"]\n",
+    "    db1_weighted=exponential_weighted_grad_params[\"db1\"]\n",
+    "    db2_weighted=exponential_weighted_grad_params[\"db2\"]\n",
+    "    \n",
+    "    \n",
+    "    dW1=beta_1*dW1_weighted+(1-beta_1)*grad_params[\"dW1\"]\n",
+    "    dW2=beta_1*dW2_weighted+(1-beta_1)*grad_params[\"dW2\"]\n",
+    "    db1=beta_1*db1_weighted+(1-beta_1)*grad_params[\"db1\"]\n",
+    "    db2=beta_1*db2_weighted+(1-beta_1)*grad_params[\"db2\"]\n",
+    "\n",
+    "    exponential_weighted_grad_params[\"dW1\"]=dW1\n",
+    "    exponential_weighted_grad_params[\"dW2\"]=dW2\n",
+    "    exponential_weighted_grad_params[\"db1\"]=db1\n",
+    "    exponential_weighted_grad_params[\"db2\"]=db2\n",
+    "    \n",
+    "    W1=W1-learning_rate*dW1\n",
+    "    W2=W2-learning_rate*dW2\n",
+    "    b1=b1-learning_rate*db1\n",
+    "    b2=b2-learning_rate*db2\n",
+    "    \n",
+    "    return W1,W2,b1,b2,exponential_weighted_grad_params\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gradient_descent_normal(grad_params,params,learning_rate=0.1):          \n",
+    "    \n",
+    "    W1=params[\"W1\"]\n",
+    "    W2=params[\"W2\"]\n",
+    "    b1=params[\"b1\"]\n",
+    "    b2=params[\"b2\"]\n",
+    "    \n",
+    "    W1=W1-learning_rate*grad_params[\"dW1\"]\n",
+    "    W2=W2-learning_rate*grad_params[\"dW2\"]\n",
+    "    b1=b1-learning_rate*grad_params[\"db1\"]\n",
+    "    b2=b2-learning_rate*grad_params[\"db2\"]\n",
+    "    \n",
+    "    return W1,W2,b1,b2\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rmsprop(grad_params,params,rms_prop_params,learning_rate=0.1,beta_2=0.99,epsilon=1e-7):\n",
+    "    \n",
+    "    W1=params[\"W1\"]\n",
+    "    W2=params[\"W2\"]\n",
+    "    b1=params[\"b1\"]\n",
+    "    b2=params[\"b2\"]\n",
+    "    \n",
+    "    dSW1=rms_prop_params[\"dSW1\"]\n",
+    "    dSW2=rms_prop_params[\"dSW2\"]\n",
+    "    dSb1=rms_prop_params[\"dSb1\"]\n",
+    "    dSb2=rms_prop_params[\"dSb2\"]\n",
+    "    \n",
+    "    \n",
+    "    dSW1=beta_2*dSW1+(1-beta_2)*(((grad_params[\"dW1\"])**2)+epsilon)\n",
+    "    dSW2=beta_2*dSW2+(1-beta_2)*(((grad_params[\"dW2\"])**2)+epsilon)\n",
+    "    dSb1=beta_2*dSb1+(1-beta_2)*(((grad_params[\"db1\"])**2)+epsilon)\n",
+    "    dSb2=beta_2*dSb2+(1-beta_2)*(((grad_params[\"db2\"])**2)+epsilon)\n",
+    "\n",
+    "    rms_prop_params[\"dSW1\"]=dSW1\n",
+    "    rms_prop_params[\"dSW2\"]=dSW2\n",
+    "    rms_prop_params[\"dSb1\"]=dSb1\n",
+    "    rms_prop_params[\"dSb2\"]=dSb2\n",
+    "    \n",
+    "    W1=W1-learning_rate*np.divide(grad_params[\"dW1\"],np.sqrt(dSW1))\n",
+    "    W2=W2-learning_rate*np.divide(grad_params[\"dW2\"],np.sqrt(dSW2))\n",
+    "    b1=b1-learning_rate*np.divide(grad_params[\"db1\"],np.sqrt(dSb1))\n",
+    "    b2=b2-learning_rate*np.divide(grad_params[\"db2\"],np.sqrt(dSb2))\n",
+    "    \n",
+    "    return W1,W2,b1,b2,rms_prop_params\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def adam(grad_params,params,rms_prop_params,exponential_weighted_grad_params,learning_rate=0.1,beta_1=0.9,beta_2=0.99,epsilon=1e-7):\n",
+    "    \n",
+    "    W1=params[\"W1\"]\n",
+    "    W2=params[\"W2\"]\n",
+    "    b1=params[\"b1\"]\n",
+    "    b2=params[\"b2\"]\n",
+    "    \n",
+    "    dSW1=rms_prop_params[\"dSW1\"]\n",
+    "    dSW2=rms_prop_params[\"dSW2\"]\n",
+    "    dSb1=rms_prop_params[\"dSb1\"]\n",
+    "    dSb2=rms_prop_params[\"dSb2\"]\n",
+    "    \n",
+    "    \n",
+    "    dSW1=beta_2*dSW1+(1-beta_2)*(((grad_params[\"dW1\"])**2)+epsilon)\n",
+    "    dSW2=beta_2*dSW2+(1-beta_2)*(((grad_params[\"dW2\"])**2)+epsilon)\n",
+    "    dSb1=beta_2*dSb1+(1-beta_2)*(((grad_params[\"db1\"])**2)+epsilon)\n",
+    "    dSb2=beta_2*dSb2+(1-beta_2)*(((grad_params[\"db2\"])**2)+epsilon)\n",
+    "\n",
+    "    rms_prop_params[\"dSW1\"]=dSW1\n",
+    "    rms_prop_params[\"dSW2\"]=dSW2\n",
+    "    rms_prop_params[\"dSb1\"]=dSb1\n",
+    "    rms_prop_params[\"dSb2\"]=dSb2\n",
+    "    \n",
+    "    dW1_weighted=exponential_weighted_grad_params[\"dW1\"]\n",
+    "    dW2_weighted=exponential_weighted_grad_params[\"dW2\"]\n",
+    "    db1_weighted=exponential_weighted_grad_params[\"db1\"]\n",
+    "    db2_weighted=exponential_weighted_grad_params[\"db2\"]\n",
+    "    \n",
+    "    \n",
+    "    dW1=beta_1*dW1_weighted+(1-beta_1)*grad_params[\"dW1\"]\n",
+    "    dW2=beta_1*dW2_weighted+(1-beta_1)*grad_params[\"dW2\"]\n",
+    "    db1=beta_1*db1_weighted+(1-beta_1)*grad_params[\"db1\"]\n",
+    "    db2=beta_1*db2_weighted+(1-beta_1)*grad_params[\"db2\"]\n",
+    "\n",
+    "    exponential_weighted_grad_params[\"dW1\"]=dW1\n",
+    "    exponential_weighted_grad_params[\"dW2\"]=dW2\n",
+    "    exponential_weighted_grad_params[\"db1\"]=db1\n",
+    "    exponential_weighted_grad_params[\"db2\"]=db2\n",
+    "    \n",
+    "    \n",
+    "    W1=W1-learning_rate*np.divide(dW1,np.sqrt(dSW1))\n",
+    "    W2=W2-learning_rate*np.divide(dW2,np.sqrt(dSW2))\n",
+    "    b1=b1-learning_rate*np.divide(db1,np.sqrt(dSb1))\n",
+    "    b2=b2-learning_rate*np.divide(db2,np.sqrt(dSb2))\n",
+    "    \n",
+    "    return W1,W2,b1,b2,rms_prop_params,exponential_weighted_grad_params\n",
+    "    "
    ]
   }
  ],
