LR_for_one_varb

--- a/LinearRegression/LinearRegression.ipynb
+++ b/LinearRegression/LinearRegression.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,8 @@
     "\n",
     "        Args:\n",
     "            X: Matrix containing the features for every example.\n",
-    "            y: [x1,x2,x3,...].T (train_examples*features) \n",
+    "            X= [x1,x2,x3,...].T (train_examples*features) \n",
+    "            y: A column vector containing the expected output for all train examples. \n",
     "            num_interations: number of iterations to run the gradient descent algo. \n",
     "            learning_rate: a hyperparameter for the network\n",
     "\n",
@@ -73,22 +74,27 @@
     "        return self.theta \n",
     "\n",
     "\n",
-    "        '''        \n",
-    "        def fit_with_normal_equation(X,y):\n",
+    "             \n",
+    "    def fit_with_normal_equation(self,X,y):\n",
     "\n",
-    "                   \"\"\"Example function with PEP 484 type annotations.\n",
+    "        \"\"\"Example function with PEP 484 type annotations.\n",
     "\n",
-    "            Args:\n",
-    "                param1: The first parameter.\n",
-    "                param2: The second parameter.\n",
+    "        Args:\n",
+    "            param1: The first parameter.\n",
+    "            param2: The second parameter.\n",
     "\n",
-    "            Returns:\n",
-    "                The return value. True for success, False otherwise.\n",
+    "        Returns:\n",
+    "            The return value. True for success, False otherwise.\n",
     "\n",
-    "            \"\"\"\n",
+    "        \"\"\"\n",
     "\n",
+    "        combined_matrix=np.dot(X.T,X)\n",
+    "        combined_matrix=np.dot(np.linalg.pinv(combined_matrix),X.T)\n",
+    "        optimized_theta=np.dot(combined_matrix,y) \n",
+    "        print(\"The dimension of optimized theta is\",optimized_theta.shape)\n",
+    "        return optimized_theta \n",
     "\n",
-    "        def accuracy():\n",
+    "    '''def accuracy():\n",
     "\n",
     "               \"\"\"Example function with PEP 484 type annotations.\n",
     "\n",
